# ttt

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLI_TESTS.md  ERROR_RECOVERY_IMPLEMENTATION.md  FIXME.md  MIGRATION.md  MIGRATION_CHECKLIST.md  MIGRATION_GUIDE.md  MIGRATION_PROPOSAL.md  PHASE2_SUMMARY.md  PROJECT_STRUCTURE.md  PROPOSAL_CLI.md  PROPOSAL_CLI_FIRE.md  README.md  RELEASE_NOTES.md  TESTING_PROPOSAL.md  TOOL_ROADMAP.md  TOOL_SYSTEM_PHASE2.md  TOOL_SYSTEM_PHASE3.md  TTT_CLI.md  __init__.py  ai_wrapper.py  base.py  cli.py  config.yaml  debug_backend_selection.py  debug_flow.py  debug_model_registry.py  goobits.yaml  import_sorting_summary.md  pyproject.toml  pyproject.toml.bak  pytest-integration.ini  requirements.txt  run_integration_tests.sh  run_tests.sh  setup-config.yaml  (+8 more)
.claude/: settings.local.json
agents/: __init__.py  api.py  cli.py  errors.py  registry.py  response.py  routing.py  session.py  utils.py
ai/: __init__.py  __main__.py  api.py  chat.py  cli.py  cli_clean.py  cli_simple.py  cli_v2.py  config.py  config_loader.py  exceptions.py  models.py  plugins.py  routing.py
docs/: GLOSSARY.md  INDEX.md  STYLE_GUIDE.md  api-reference.md  architecture.md  configuration.md  development.md  extensibility.md
examples/: 01_basic_usage.py  02_tools_and_workflows.py  03_chat_and_persistence.py  04_advanced_features.py  README.md  basic_usage.py  builtin_tools_demo.py  chat_with_tools.py  cli_commands.py  exception_handling.py  multi_modal.py  persistent_chat.py
tests/: README.md  README_MOCKING.md  README_RATE_LIMITING.md  README_TESTING.md  __init__.py  conftest.py  import_updates_summary.md  test_api.py  test_api_advanced.py  test_api_core.py  test_api_streaming.py  test_backends_cloud.py  test_backends_local.py  test_basic.py  test_builtin_tools.py  test_chat.py  test_chat_advanced.py  test_chat_streaming.py  test_chat_tools.py  test_cli.py  test_cli_advanced.py  test_cli_commands.py  test_cli_direct_prompt.py  (+35 more)
(+113 files in other folders)
