[build-system]
requires = [ "setuptools>=64", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "goobits-ttt"
version = "1.0.2"
description = "A powerful AI assistant for your terminal"
readme = "README.md"
requires-python = ">=3.8"
keywords = [ "ai", "assistant", "terminal", "llm", "chat", "gpt", "claude",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Communications :: Chat", "Topic :: Scientific/Engineering :: Artificial Intelligence",]
dependencies = [ "click>=8.0.0", "rich-click>=1.7.0", "rich>=13.0.0", "pydantic>=2.0.0", "httpx>=0.24.0", "litellm>=1.0.0", "pyyaml>=6.0.0",]
[[project.authors]]
name = "TTT CLI Contributors"

[project.license]
text = "MIT"

[project.optional-dependencies]
local = [ "httpx>=0.24.0",]
dev = [ "pytest>=7.0", "pytest-asyncio", "pytest-cov", "black", "ruff", "mypy", "build", "twine",]

[project.scripts]
ttt = "ttt.cli:cli_entry"

[project.urls]
Homepage = "https://github.com/goobits/ttt"
"Bug Tracker" = "https://github.com/goobits/ttt/issues"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.black]
line-length = 120
target-version = [ "py38",]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.package-data]
ttt = [ "setup.sh",]

[tool.setuptools.packages.find]
where = [ "src",]
include = [ "ttt*",]
exclude = [ "tests*", "**/__pycache__", "*.egg-info", "build", "dist",]
